--- a/src/Lily/AppBundle/Resources/views/themes/lily/index.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/index.html.twig
@@ -16,15 +16,6 @@
 
 {% endblock %}
 
-  <!-- BEGIN BUGSNAG -->
-  {% if app.environment == 'prod' %}
-  <script
-    src="//d2wy8f7a9ursnm.cloudfront.net/bugsnag-2.min.js"
-    data-apikey="47bb0c88dadd95fd355d758cc434a7b7">
-  </script>
-  {% endif %}
-  <!-- END BUGSNAG -->
-
 </head>
 <body>
 
@@ -148,6 +139,22 @@
 		  config.ws.host = "{{ ws_host }}";
       config.ws.protocol = "{{ ws_protocol }}";
 		</script>
+		  
+    <!-- 
+      Load Bugsnag
+    -->  
+    <script
+      src="//d2wy8f7a9ursnm.cloudfront.net/bugsnag-2.min.js"
+      data-apikey="38313d808c52c00caa38aeed097efd1d">
+    </script>
+  
+    <!-- 
+      Set Bugsnag Config
+    -->  
+    <script>
+      Bugsnag.releaseStage = "{{ app.environment }}";
+      Bugsnag.notifyReleaseStages = ["prod"];    
+    </script>
 
 		<script>
 		  // Google Analytics integration:
