--- a/src/Lily/BackOfficeBundle/Resources/views/Dashboard/index.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/Dashboard/index.html.twig
@@ -3,12 +3,8 @@
 {% block stylesheets %}
 
   {{ parent() }}
-
-  {% stylesheets 'css/backoffice/dashboard.css' filter='cssrewrite' output='css/compiled/dashboard.css' %}
-
-  <link rel="stylesheet" href="{{ asset_url }}" type="text/css" />
-
-  {% endstylesheets %}
+  
+  <link rel="stylesheet" href="{{ asset('css/backoffice/dashboard.css', version=getAppVersion()) }}" type="text/css" />
 
 {% endblock %}
 
@@ -75,6 +71,7 @@
     {% autoescape false %}
       <script type="text/javascript">
         var config = window.config || {};
+        config.version = "{{ getAppVersion() }}";
         config.ws = {};
         config.root = '{{ app.request.getBaseURL() }}/api';
         config.client = JSON.parse('{{ client | serialize('json') | raw }}');
