--- a/src/Lily/UserBundle/Resources/views/Profile/index.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Profile/index.html.twig
@@ -4,11 +4,13 @@
 
 {{ parent() }}
 
-{% stylesheets 'css/backoffice/profile.css' 'css/utils/daterangepicker.css' filter='cssrewrite' output='css/compiled/profile.css' %}
+{% stylesheets 'css/utils/daterangepicker.css' filter='cssrewrite' output='css/compiled/profile.css' %}
 
   <link rel="stylesheet" href="{{ asset_url }}" type="text/css" />
 
 {% endstylesheets %}
+
+  <link rel="stylesheet" href="{{ asset('css/backoffice/profile.css', version=getAppVersion()) }}" type="text/css"/>
 
 {% endblock %}
 
@@ -73,6 +75,7 @@
     {% autoescape false %}
       <script type="text/javascript">
         var config = window.config || {};
+        config.version = "{{ getAppVersion() }}";
         config.ws = {};
         config.root = '{{ app.request.getBaseURL() }}/api';
         config.userId = '{{ app.user.id }}';
