--- a/src/Lily/ChatBundle/Resources/views/index.html.twig
+++ b/src/Lily/ChatBundle/Resources/views/index.html.twig
@@ -4,11 +4,7 @@
 
 {{ parent() }} 	   
 
-{% stylesheets 'css/backoffice/chat.css' filter='cssrewrite'  output='css/compiled/chat.css'%} 
-     
-  <link rel="stylesheet" href="{{ asset_url }}" type="text/css" />     
-
-{% endstylesheets %} 
+  <link rel="stylesheet" href="{{ asset('css/backoffice/chat.css', version=getAppVersion()) }}" type="text/css"/>
 
 {% endblock %}
 
@@ -81,6 +77,7 @@
   	    
         var config = window.config || {};
         config.ws = {};
+        config.version = "{{ getAppVersion() }}";
         config.root = '{{ app.request.getBaseURL() }}/api';
         config.ws.host = "{{ ws_host }}";
         config.ws.protocol = "{{ ws_protocol }}";
