--- a/src/Lily/BackOfficeBundle/Resources/views/Utils/Chat/Message/visitor.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/Utils/Chat/Message/visitor.html.twig
@@ -1,5 +1,5 @@
 <div class="msg-visitor">
   <%- msg %>
-  <span class="date"><%= moment(date*1000).format('hh:mm') %></span>
+  <span class="date"><%= moment(date*1000).format('HH:mm') %></span>
 </div>
 <button class="btn-flag-question">Remonter la question</button>
