fix cross that was deleted

--- a/src/Lily/KnowledgeBundle/Resources/views/Questions/Edit/alternative.html.twig
+++ b/src/Lily/KnowledgeBundle/Resources/views/Questions/Edit/alternative.html.twig
@@ -1,4 +1,4 @@
-<div class="alternative title" contenteditable="true">
+<div class="title" contenteditable="true">
   <%= title %>
-  <i class="icon-remove"></i>
 </div>
+<i class="icon-remove"></i>
