typo on profile link in bo

--- a/src/Lily/BackOfficeBundle/Resources/views/header.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/header.html.twig
@@ -40,7 +40,7 @@
         </a>
         <ul class="dropdown-menu animated fadeInLeft">
           <li>
-            <a href="{{ path('lily_profile') }}">Profile</a>
+            <a href="{{ path('lily_profile') }}">Profil</a>
           </li>
           <li>
             <a href="{{ path('fos_user_security_logout') }}">Déconnexion</a>
