--- a/src/Lily/AppBundle/Resources/views/themes/lily/templates/chat.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/templates/chat.html.twig
@@ -1,9 +1,4 @@
 <div id="lily-chat" class="lily-page-cont"><!-- wrapper page les différentes pages -->
-	{% if config.avi.active %}
-<!-- 	<header id="lily-header" class="lily-cst-header">
-		<a href="#/avi" class="lily-right"><p>Posez votre question à {{ config.avi.name }}<i class="lily-icon lily-icon-arrow-right"></i></p></a>
-	</header> -->
-	{% endif %}
 	<section class="lily-main-content">
 		<section class="lily-avatar-wrapper">
 			<div id="chat-box-messages" class="chat-messages">
@@ -24,8 +19,8 @@
 	      </div>
 	  </form>
 	  <footer class="brand-footer">
-  		<a class="saio-brandmark" href="http://saio.fr" alt="saio.fr" target="_blank" rel="nofollow">
-        Créé par <img class="saio-logo" src="http://cdn-saio.fr/customer/{{licence}}/images/saioBrand2x.png">
+  		Créé par <a class="saio-brandmark" href="http://saio.fr" alt="saio.fr" target="_blank" rel="nofollow">
+        	<img class="saio-logo" src="http://cdn-saio.fr/customer/{{licence}}/images/saioBrand2x.png">
       </a>
 	  </footer>
   </section>
