finish and apply to all modal a component accessible from backoffice/app.js to reuse code logic & centralize modal creation

--- a/src/Lily/KnowledgeBundle/Resources/views/Categories/edit.html.twig
+++ b/src/Lily/KnowledgeBundle/Resources/views/Categories/edit.html.twig
@@ -26,7 +26,7 @@
   <button type="button" class="btn btn-default btn-cancel" data-dismiss="modal">
     Annuler
   </button>
-  <button type="button" class="btn btn-primary btn-update">
+  <button type="button" class="btn btn-primary btn-update" data-dismiss="modal">
     Sauvegarder
   </button>
 </div>
