--- a/src/Lily/BackOfficeBundle/Resources/views/layout.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/layout.html.twig
@@ -98,6 +98,9 @@ filter='cssrewrite' %}
   <script type="text/template" id="modalConnectionLostTpl">
     {% include 'LilyChatBundle:Connection:lost.html.twig' %}
   </script>
+  <script type="text/template" id="modalAlertTpl">
+    {% include 'LilyBackOfficeBundle:Utils/Modal:alert.html.twig' %}
+  </script>
   <script type="text/template" id="modalAppTpl">
     {% include 'LilyBackOfficeBundle:Utils/Modal:app.html.twig' %}
   </script>
