Add a prompt modal to insert link in knowledge base

--- a/src/Lily/BackOfficeBundle/Resources/views/layout.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/layout.html.twig
@@ -107,6 +107,9 @@ filter='cssrewrite' %}
   <script type="text/template" id="modalConfirmTpl">
     {% include 'LilyBackOfficeBundle:Utils/Modal:confirm.html.twig' %}
   </script>
+  <script type="text/template" id="modalPromptTpl">
+    {% include 'LilyBackOfficeBundle:Utils/Modal:prompt.html.twig' %}
+  </script>
   <script type="text/template" id="modalTransferOperatorTpl">
     {% include 'LilyBackOfficeBundle:Utils/Chat/Modals/Transfer:operator.html.twig' %}
   </script>
