--- a/src/Lily/KnowledgeBundle/Resources/views/Questions/Edit/answer.html.twig
+++ b/src/Lily/KnowledgeBundle/Resources/views/Questions/Edit/answer.html.twig
@@ -102,6 +102,9 @@
         <button class="btn btn-sm btn-toolbar" data-command-name="bold">
           <i class="icon-bold"></i>
         </button>
+        <button class="btn btn-sm btn-toolbar" data-command-name="linkPrompt">
+          <i class="icon-external-link"></i>
+        </button>
       </div>
       
     <% } %>
