--- a/web/css/app/lily.css
+++ b/web/css/app/lily.css
@@ -1869,6 +1869,10 @@ MENU
   border-radius: 3px 3px 0 0;
 }
 
+.standalone #lily-toolbar {
+  border-radius: 0;
+}
+
 #lily-toolbar-name {
   position: absolute;
   left: 0;
@@ -1894,6 +1898,10 @@ MENU
   padding: 0;
   cursor: pointer;
   text-align: center;
+}
+
+.standalone #lily-toolbar-icons {
+  display: none;
 }
 
 .lily-icon-reduce {
