add suffix on all main require files to prevent caching in next release

--- a/src/Lily/AppBundle/Resources/views/themes/lily/index.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/index.html.twig
@@ -183,7 +183,7 @@ mixpanel.init("a5f27c1b7c228141acba66fd159f1937");
 
 <script
   src="{{ asset('js/bower_components/requirejs/require.js')}}"
-  data-main="{{ asset('js/app/main.js')}}">
+  data-main="{{ asset('js/app/main-1.js')}}">
 </script>
 
 </body>
