--- a/src/Lily/BackOfficeBundle/Resources/views/Faq/index.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/Faq/index.html.twig
@@ -111,7 +111,7 @@
 
 <script
   src="{{ asset('js/bower_components/requirejs/require.js')}}"
-  data-main="{{ asset('js/backoffice/faq/main.js')}}">
+  data-main="{{ asset('js/backoffice/faq/main-1.js')}}">
 </script>
 
 {% endblock %}
