--- a/src/Lily/ChatBundle/Resources/views/index.html.twig
+++ b/src/Lily/ChatBundle/Resources/views/index.html.twig
@@ -92,7 +92,7 @@
 
 <script
   src="{{ asset('js/bower_components/requirejs/require.js')}}"
-  data-main="{{ asset('js/backoffice/chat/main.js')}}">
+  data-main="{{ asset('js/backoffice/chat/main-1.js')}}">
 </script>
 
 {% endblock %}
