--- a/src/Lily/BackOfficeBundle/Resources/views/Utils/Chat/skeleton.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/Utils/Chat/skeleton.html.twig
@@ -21,7 +21,7 @@
 
         </header>
 
-        <div class="header-current" data-toggle="collapse" data-target=".list-current">
+        <div class="header-current header-collapsible" data-toggle="collapse" data-target=".list-current">
           <h5>EN COURS</h5>
           <span class="badge bg-default pull-right">0</span>
         </div>
@@ -30,7 +30,7 @@
             Current visitor record view
         -->
   	    </ul>
-        <div class="header-waiting" data-toggle="collapse" data-target=".list-waiting">
+        <div class="header-waiting header-collapsible" data-toggle="collapse" data-target=".list-waiting">
           <h5>EN ATTENTE</h5>
           <span class="badge bg-default pull-right">0</span>
         </div>
