--- a/src/Lily/BackOfficeBundle/Resources/views/layout.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/layout.html.twig
@@ -92,6 +92,12 @@ filter='cssrewrite' %}
   <script type="text/template" id="liveMessageVisitorTpl">
     {% include 'LilyBackOfficeBundle:Utils/Chat/Message:visitor.html.twig' %}
   </script>
+  <script type="text/template" id="searchKnowledgeTpl">
+    {% include 'LilyBackOfficeBundle:Utils/Chat/Search:search.html.twig' %}
+  </script>
+  <script type="text/template" id="searchKnowledgeAnswerTpl">
+    {% include 'LilyBackOfficeBundle:Utils/Chat/Search:searchAnswer.html.twig' %}
+  </script>
   <!-- 
       Modals
   -->
