--- a/src/Lily/UserBundle/Resources/views/Admin/index.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Admin/index.html.twig
@@ -79,10 +79,12 @@
       config.version = "{{ getAppVersion() }}";
       config.ws = {};
       config.root = '{{ app.request.getBaseURL() }}/api';
+      config.appRoot = '{{ app.request.getBaseURL() }}/app/api';
       config.licence = '{{ app.user.client.licence }}';
       config.maxusers = '{{ app.user.client.config.maxusers }}';
 		  config.ws.host = "{{ ws_host }}";
       config.ws.protocol = "{{ ws_protocol }}";
+      config.synapsePassword = '{{ app.user.client.synapsePassword }}';
     </script>
     {% endautoescape %}
   {% endblock %}
