fix form submit reloading the page

--- a/src/Lily/BackOfficeBundle/Resources/views/Utils/Chat/Search/search.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/Utils/Chat/Search/search.html.twig
@@ -8,9 +8,9 @@
 </section>
 
 <section class="action-container">
-  <form class="search-input-component">
+  <div class="search-input-component">
     <div class="wrapper-input group">
       <input placeholder="Rechercher..." class="textarea-input search-input">
     </div>
-  </form>
+  </div>
 </section>
