refactoring chat UI for consistency && smooth kb integration. Adding loader in search

--- a/src/Lily/BackOfficeBundle/Resources/views/Utils/Chat/informations.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/Utils/Chat/informations.html.twig
@@ -4,8 +4,8 @@
 
 <header class="header informations-header">
   <h5 class="hide">INFORMATIONS</h5>
-  <icon class="icon-angle-right pull-right hide"></icon>
-  <icon class="icon-angle-left pull-right"></icon>
+  <span class="icon-angle-right icon-toggle pull-right hide"></span>
+  <span class="icon-angle-left icon-toggle pull-right"></span>
 </header>
 
 <div class="informations-panel">
@@ -67,6 +67,8 @@
 <div class="search-panel">
   <div class="header-search header-collapsible">
     <h5>BASE DE CONNAISSANCE</h5>
+    <span class="icon-angle-top icon-toggle pull-right hide"></span>
+    <span class="icon-angle-bottom icon-toggle pull-right"></span>
   </div>
 
   <!-- Here go the search view -->
