--- a/web/css/app/lily.css
+++ b/web/css/app/lily.css
@@ -870,9 +870,9 @@ HEADER
   vertical-align: bottom;
   color: #888888;
   border: 1px solid rgba(181, 181, 181, .25);
-  border-radius: 2px;
+  border-radius: 3px;
   outline: none;
-  background-color: rgba(232, 232, 232, .4);
+  background-color: rgba(232, 232, 232, 0.6);
 
   -webkit-appearance: none;;
 }
@@ -946,16 +946,16 @@ HEADER
 }
 
 :-moz-placeholder {
-  color: #888888;
+  color: #777777;
 }
 ::-moz-placeholder {
-  color: #888888;
+  color: #777777;
 }
 :ms-input-placeholder {
-  color: #888888;
+  color: #777777;
 }
 ::-webkit-input-placeholder {
-  color: #888888;
+  color: #777777;
 }
 
 
